# AdventOfCode

./: .gitignore  Cargo.toml  README.md
aoc-2022/: Cargo.toml
aoc-2022/src/: lib.rs  main.rs
aoc-2022/src/day03/: mod.rs
aoc-2022/src/day08/: mod.rs
aoc-2022/src/day10/: mod.rs
aoc-2022/src/day11/: mod.rs
aoc-2022/src/day14/: mod.rs
aoc-2022/src/day15/: mod.rs
aoc-2024/: Cargo.toml
aoc-2024/src/: lib.rs
aoc-2024/src/day01/: mod.rs
aoc-2024/src/day02/: mod.rs
aoc-2024/src/day03/: mod.rs
aoc-2024/src/day04/: mod.rs
aoc-2024/src/day05/: mod.rs
aoc-2024/src/day06/: mod.rs
aoc-2024/src/day07/: mod.rs
aoc-2024/src/day08/: mod.rs
aoc-2024/src/day09/: mod.rs
aoc-2024/src/day10/: mod.rs
aoc-2024/src/day11/: mod.rs
aoc-2024/src/day12/: mod.rs
aoc-2024/src/day13/: mod.rs
aoc-2024/src/day14/: mod.rs
aoc-2024/src/day15/: mod.rs
aoc-2024/src/day16/: mod.rs
aoc-2024/src/day17/: mod.rs
aoc-2024/src/day18/: mod.rs
aoc-2024/src/day19/: mod.rs
aoc-2024/src/day20/: mod.rs
aoc-2024/src/day21/: mod.rs
aoc-2024/src/day22/: mod.rs
aoc-2024/src/day23/: mod.rs
aoc-2024/src/day24/: mod.rs
aoc-2024/src/day25/: mod.rs
aoc-2025/: Cargo.toml
aoc-2025/src/: lib.rs
aoc-2025/src/day01/: mod.rs
aoc-2025/src/day02/: mod.rs
aoc-2025/src/day03/: mod.rs
aoc-2025/src/day04/: mod.rs
aoc-2025/src/day05/: mod.rs
aoc-2025/src/day06/: mod.rs
aoc-2025/src/day07/: mod.rs
runner/: Cargo.toml
runner/src/: main.rs
shared/src/: coordinate.rs  grid.rs  lib.rs
src/: main.rs  run_day.rs  runner.rs
src/years/: mod.rs
(+26 files in other folders)
