[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
binary-heap-plus = "0.5.0"
colored = { workspace = true }
crossterm = "0.28.1"
dedent = "0.1.1"
itertools = { workspace = true }
num = { workspace = true }
palette = "0.7.6"
regex = { workspace = true }
